# sandbox-ide-pods-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
coder/: DockerfileCoder
devops/: ide-api-deploy.yaml  ide-api-rbac.yaml  steps_api_deployed_in_my_local_cluster.md
src/: main.py
src/ide/api/: routes.py
src/ide/schemas/: schemas.py
src/ide/services/: kubernetes_service.py
src/ide/utils/: logger.py  settings.py  utils.py
