[project]
name = "ide"
version = "0.0.1"
description = "IDE API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "python-dotenv==1.1.0",
    "aiohttp>=3.12.9",
    "kubernetes==33.1.0",
    "pydantic-settings==2.10.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

